--- a/ansible/roles/sno-create-manifests/templates/ai-siteconfig.yml.j2
+++ b/ansible/roles/sno-create-manifests/templates/ai-siteconfig.yml.j2
@@ -21,12 +21,12 @@ spec:
 {% if sno_du_profile == "4.15" %}
     # 4.15
     installConfigOverrides:  "{\"capabilities\":{\"baselineCapabilitySet\": \"None\", \"additionalEnabledCapabilities\": [ \"OperatorLifecycleManager\", \"NodeTuning\" ] }}"
-    # 4.16, 4.17
+    # 4.16, 4.17, 4.18
     # installConfigOverrides:  "{\"capabilities\":{\"baselineCapabilitySet\": \"None\", \"additionalEnabledCapabilities\": [ \"OperatorLifecycleManager\", \"Ingress\", \"NodeTuning\" ] }}"
-{% elif sno_du_profile in ["4.16", "4.17"] %}
+{% elif sno_du_profile in ["4.16", "4.17", "4.18"] %}
     # 4.15
     # installConfigOverrides:  "{\"capabilities\":{\"baselineCapabilitySet\": \"None\", \"additionalEnabledCapabilities\": [ \"OperatorLifecycleManager\", \"NodeTuning\" ] }}"
-    # 4.16, 4.17
+    # 4.16, 4.17, 4.18
     installConfigOverrides:  "{\"capabilities\":{\"baselineCapabilitySet\": \"None\", \"additionalEnabledCapabilities\": [ \"OperatorLifecycleManager\", \"Ingress\", \"NodeTuning\" ] }}"
 {% else %}
 {% if ai_siteconfig_fips %}
@@ -36,7 +36,7 @@ spec:
     clusterLabels:
       cloud: auto-detect
       common: 'true'
-{% if sno_du_profile in ["4.15", "4.16", "4.17"] %}
+{% if sno_du_profile in ["4.15", "4.16", "4.17", "4.18"] %}
       du-profile: "{{ sno_du_profile }}"
 {% endif %}
       group-du-sno: ''
