Add Telco Core ClusterInstance

--- a/ansible/roles/telco-core-manifests/templates/telco-core-siteconfig.yml.j2
+++ b/ansible/roles/telco-core-manifests/templates/telco-core-siteconfig.yml.j2
@@ -17,12 +17,12 @@ spec:
   clusters:
   - clusterName: {{ cluster_name }}
     networkType: "OVNKubernetes"
-    # extraManifests:
-    #   searchPaths:
-    #     # Reference configuration extra manifests
-    #     - extra-manifests
-    #     # Custom extra manifests if needed
-    #     - custom-manifests
+    extraManifests:
+      searchPaths:
+        # Reference configuration extra manifests
+        # - extra-manifests
+        # Custom extra manifests if needed
+        # - custom-manifests
     clusterLabels:
       common: "core"
       version: "4.18"
