--- a/ansible/roles/telco-core-manifests/templates/telco-core-clusterinstance.yml.j2
+++ b/ansible/roles/telco-core-manifests/templates/telco-core-clusterinstance.yml.j2
@@ -28,6 +28,19 @@ data:
   password: {{ node.pm_password | b64encode }}
   username: {{ node.pm_user | b64encode }}
 {% endfor %}
+{% if telco_core_clusterinstance_extra_manifests %}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: extra-manifests-configmap
+  namespace: {{ cluster_name }}
+data:
+{%   for item in telco_core_extra_manifests %}
+  {{ item }}: |
+    {{ lookup('file', 'extra-manifests/' + item ) | indent(4) }}
+{%   endfor %}
+{% endif %}
 ---
 apiVersion: siteconfig.open-cluster-management.io/v1alpha1
 kind: ClusterInstance
