Update the SNO manifests

--- a/ansible/roles/sno-create-manifests/templates/ibi-manifest.yml.j2
+++ b/ansible/roles/sno-create-manifests/templates/ibi-manifest.yml.j2
@@ -150,7 +150,7 @@ metadata:
   labels:
     cloud: auto-detect
     common: 'true'
-{% if sno_du_profile in ["4.15", "4.16", "4.17"] %}
+{% if sno_du_profile in ["4.15", "4.16", "4.17", "4.18", "4.19"] %}
     du-profile: "{{ sno_du_profile }}"
 {% endif %}
     group-du-sno: ''
