--- a/ansible/roles/rhacm-hub-mirror/templates/idms-konflux.yaml.j2
+++ b/ansible/roles/rhacm-hub-mirror/templates/idms-konflux.yaml.j2
@@ -1,10 +1,10 @@
 ---
-apiVersion: operator.openshift.io/v1alpha1
-kind: ImageContentSourcePolicy
+apiVersion: config.openshift.io/v1
+kind: ImageDigestMirrorSet
 metadata:
   name: rhacm-repo
 spec:
-  repositoryDigestMirrors:
+  imageDigestMirrors:
 {% if rhacm_disconnected_registry and rhacm_disconnected_registry|length > 1 %}
   - mirrors:
     - {{ rhacm_disconnected_registry }}:{{ rhacm_disconnected_registry_port }}/openshift
